--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,18 @@
 name = "nats-security-system"
 version = "0.1.0"
 edition = "2021"
+description = "Security monitoring system using NATS for communication"
+authors = ["Anubhav Gain <imanubhavgain@gmail.com>"]
+license = "MIT"
 
 # Define multiple binaries in the same package
 [[bin]]
 name = "security-agent"
-path = "src/agent.rs"
+path = "src/bin/agent.rs"
 
 [[bin]]
 name = "security-manager"
-path = "src/manager.rs"
+path = "src/bin/manager.rs"
 
 # The main binary
 [[bin]]
@@ -18,11 +21,60 @@ name = "nats-security-system"
 path = "src/main.rs"
 
 [dependencies]
+# NATS client
 async-nats = "0.39.0"
-tokio = { version = "1", features = ["full"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-futures = "0.3"
-uuid = { version = "1.3.3", features = ["v4", "serde"] }
+
+# Async runtime
+tokio = { version = "1.32.0", features = ["full"] }
+futures = "0.3.28"
+async-trait = "0.1.73"
+
+# Serialization
+serde = { version = "1.0.189", features = ["derive"] }
+serde_json = "1.0.107"
+toml = "0.8.1"
+serde_yaml = "0.9.25"
+
+# Error handling
+anyhow = "1.0.75"
+thiserror = "1.0.49"
+
+# Logging
+log = "0.4.20"
+log4rs = "1.2.0"
+tracing = "0.1.37"
+tower-http = { version = "0.4.4", features = ["trace", "cors"] }
+
+# Web framework
+axum = "0.6.20"
+axum-macros = "0.3.8"
+
+# Crypto and hashing
+sha2 = "0.10.8"
+uuid = { version = "1.4.1", features = ["v4", "serde"] }
+get_if_addrs = "0.5.3"  # Fixed: hyphen changed to underscore
+
+# System information
 whoami = "1.4.1"
-sha2 = "0.10.6"
+walkdir = "2.4.0"
+
+# TLS
+rustls = "0.21.8"
+rustls-pemfile = "1.0.3"
+
+[dev-dependencies]
+tempfile = "3.8.0"
+tokio-test = "0.4.3"
+pretty_assertions = "1.4.0"
+
+[profile.release]
+# Optimize for speed
+opt-level = 3
+# Link-time optimization
+lto = true
+# Enable CPU-specific optimizations
+codegen-units = 1
+# Panic behavior - abort immediately rather than unwind
+panic = "abort"
+# Strip debug symbols
+strip = true
